Committing Team Project updates

--- a/index.html
+++ b/index.html
@@ -69,7 +69,89 @@
           </div>
         </div>
       </nav>
-      This example uses background (bg-body-tertiary) and spacing (me-auto, mb-2, mb-lg-0, m
+      <hr class="m-0" />
+
+      <main class="container bg-light pt-4">
+        <section class="row justify-content-center text-center mx-5">
+          <div class="col-8 col-md-4">
+            <h1 class="fw-bold">ABOUT US</h1>
+            <p class="text-secondary">Lorem ipsum dolor sit amet.</p>
+          </div>
+        </section>
+        <section class="row">
+          <div class="col-12 col-md-6">
+            <img src="imgs\jason-goodman-Oalh2MojUuk-unsplash.jpg" alt="">
+          </div>
+          <div class="col-12 col-md-6 mainBodyText">
+            <h3 class="text-secondary">Lorem ipsum dolor sit amet consectetur.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem aspernatur ullam omnis reprehenderit error,
+              id neque. Sint modi fugit atque.
+            </p>
+            <ul>
+              <li>Lorem ipsum dolor sit amet.</li>
+              <li>Lorem ipsum, dolor sit amet consectetur adipisicing.</li>
+              <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum a aut blanditiis.
+              </li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolorem incidunt beatae praesentium
+              saepe, eligendi, quidem illum molestias, tenetur labore debitis voluptatem nobis temporibus neque sequi
+              eius delectus atque officiis.</p>
+          </div>
+        </section>
+
+
+        <section class="row justify-content-center text-center mx-5">
+          <div class="col-8 col-md-4">
+            <h1 class="fw-bold">SERVICES</h1>
+            <p class="text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime fugit eligendi
+              distinctio!</p>
+          </div>
+
+          <section class="row">
+            <div class="col-12 col-md-6">
+              <img src="./imgs/zan-lazarevic-AmEeEB1g3XQ-unsplash.jpg" alt="">
+            </div>
+            <div class="col-12 col-md-6 mainBodyText">
+              <h3 class="text-secondary">Lorem ipsum dolor sit amet consectetur..</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem aspernatur ullam omnis reprehenderit
+                error,
+                id neque. Sint modi fugit atque.
+              </p>
+              <ul>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum, dolor sit amet consectetur adipisicing.</li>
+                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum a aut blanditiis.
+                </li>
+              </ul>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolorem incidunt beatae praesentium
+                saepe, eligendi, quidem illum molestias, tenetur labore debitis voluptatem nobis temporibus neque sequi
+                eius delectus atque officiis.</p>
+            </div>
+          </section>
+
+
+          <section class="row">
+            <div class="col-12 col-md-6">
+              <img src="./imgs/TechImage.png" alt="">
+            </div>
+            <div class="col-12 col-md-6 mainBodyText">
+              <h3 class="text-secondary">Lorem ipsum dolor sit amet consectetur.</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem aspernatur ullam omnis reprehenderit
+                error,
+                id neque. Sint modi fugit atque.
+              </p>
+              <ul>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum, dolor sit amet consectetur adipisicing.</li>
+                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum a aut blanditiis.
+                </li>
+              </ul>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolorem incidunt beatae praesentium
+                saepe, eligendi, quidem illum molestias, tenetur labore debitis voluptatem nobis temporibus neque sequi
+                eius delectus atque officiis.</p>
+            </div>
+          </section>
+      </main>
 
     </section>
 
